--- a/src/app/modules/guideline/pages/overview-page/overview-page.component.html
+++ b/src/app/modules/guideline/pages/overview-page/overview-page.component.html
@@ -2,5 +2,5 @@
   <h1>開發概覽</h1>
 </header>
 <ul class="mt-4 row">
-  <li class="text-orange-primary">test</li>
+  <li class="text-primary overview-page__test">test</li>
 </ul>
