feat: add header

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -54,7 +54,7 @@ $green-light: (
 $light-theme: (
   "primary": $primary-light,
   "secondary": $secondary-light,
-  "black": $grey-light,
+  "black": $black-light,
   "azure": $azure-light,
   "cyan": $cyan-light,
   "green": $green-light,
