--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<router-outlet></router-outlet>
-<div class="row"></div>
+<app-header></app-header>
+<main>
+  <router-outlet></router-outlet>
+</main>
