--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,27 +1,21 @@
-@mixin text-outrange-hidden {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
-}
+@import "variables";
 
-@mixin use-icon($icon-code) {
-    content: $icon-code;
-    font-family: "icomoon" !important;
-    line-height: 1;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+@mixin text-outrange-hidden {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
 }
 
 @mixin generateStyleByBreakpoint($break-point: "md") {
-    @media screen and (min-width: map-get($grid-breakpoints, $break-point)) {
-        @content;
-    }
+  @media screen and (min-width: map-get($grid-breakpoints, $break-point)) {
+    @content;
+  }
 }
 
 @mixin generateStyleByMaxBreakpoint($break-point: "md") {
-    @media screen and (max-width: calc(map-get($grid-breakpoints, $break-point) - 1px)) {
-        @content;
-    }
+  @media screen and (max-width: calc(map-get($grid-breakpoints, $break-point) - 1px)) {
+    @content;
+  }
 }
