--- a/src/app/modules/shared/components/header/header.component.scss
+++ b/src/app/modules/shared/components/header/header.component.scss
@@ -4,7 +4,10 @@
   height: 5.625rem;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
   border-bottom-left-radius: 3rem;
-  @include generateStyleByMaxBreakpoint("sm") {
+}
+
+@include generateStyleByMaxBreakpoint("md") {
+  .component-header {
     height: 3.125rem;
   }
 }
