--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -1,1 +1,19 @@
-<header class="component-header bg-white"></header>
+<header class="component-header bg-white d-flex justify-content-between align-items-center">
+  <app-main-logo class="h-100"></app-main-logo>
+  <div class="menu d-flex">
+    <ul class="h-100 align-items-center menu__buttons">
+      <li>
+        <app-borderless-button>最新消息</app-borderless-button>
+      </li>
+      <li>
+        <app-borderless-button>產品介紹</app-borderless-button>
+      </li>
+      <li>
+        <app-borderless-button>關於SYNTRON</app-borderless-button>
+      </li>
+      <li>
+        <app-borderless-button>聯絡我們</app-borderless-button>
+      </li>
+    </ul>
+  </div>
+</header>
