--- a/src/app/modules/guideline/pages/overview-page/overview-page.component.html
+++ b/src/app/modules/guideline/pages/overview-page/overview-page.component.html
@@ -1,6 +1,13 @@
-<header class="d-flex flex-row align-items-center justify-content-between">
-<!--  <h1>開發概覽</h1>-->
-</header>
+<!--<header></header>-->
 <!--<ul class="mt-4 row">-->
 <!--  <li class="text-primary overview-page__test">test</li>-->
 <!--</ul>-->
+
+<section class="overview-page">
+  <section class="main-img-container">
+    <div class="d-flex main-img-container__gradient-bg">
+      <p class="main-img-container__syntron-text text-white d-flex justify-content-center align-items-center">SYNTRON</p>
+      <img src="" alt="" class="h-100 main-img-container__img">
+    </div>
+  </section>
+</section>
