--- a/src/app/modules/guideline/pages/overview-page/overview-page.component.scss
+++ b/src/app/modules/guideline/pages/overview-page/overview-page.component.scss
@@ -1,7 +1,32 @@
+//.overview-page {
+//  &__test {
+//    &::before {
+//      content: "123";
+//    }
+//  }
+//}
+
+
 .overview-page {
-  &__test {
-    &::before {
-      content: "123";
-    }
+  max-height: 100vh;
+  overflow-y: auto;
+}
+
+.main-img-container {
+  &__gradient-bg {
+    background: linear-gradient(180deg, rgb(163, 188, 236) 0%, rgb(176, 241, 237) 33%, rgb(221, 242, 160) 66%, rgb(255, 251, 157) 100%);
+    height: 500px;
+  }
+
+  &__syntron-text {
+    width: 60px;
+    writing-mode: vertical-lr;
+  }
+
+  &__img {
+    border-top-left-radius: 3rem;
+    border-bottom-left-radius: 3rem;
+    padding-right: 0;
+    width: calc(100% - 60px);
   }
 }
