feat: add news component and playing animation

--- a/src/app/modules/guideline/pages/overview-page/overview-page.component.html
+++ b/src/app/modules/guideline/pages/overview-page/overview-page.component.html
@@ -9,5 +9,7 @@
       <p class="main-img-container__syntron-text text-white d-flex justify-content-center align-items-center">SYNTRON</p>
       <img src="" alt="" class="h-100 main-img-container__img">
     </div>
+
+    <app-news></app-news>
   </section>
 </section>
