--- a/src/app/modules/guideline/pages/overview-page/overview-page.component.scss
+++ b/src/app/modules/guideline/pages/overview-page/overview-page.component.scss
@@ -6,6 +6,8 @@
 //  }
 //}
 
+@import "colors";
+
 
 .overview-page {
   max-height: 100vh;
@@ -14,7 +16,7 @@
 
 .main-img-container {
   &__gradient-bg {
-    background: linear-gradient(180deg, rgb(163, 188, 236) 0%, rgb(176, 241, 237) 33%, rgb(221, 242, 160) 66%, rgb(255, 251, 157) 100%);
+    background: linear-gradient(180deg, map-get($azure-light, 2) 0%, map-get($cyan-light, 2) 33.3%, map-get($green-light, 2) 66.6%, #FFFb9D 100%);
     height: 500px;
   }
 
