feat: new component finish

--- a/src/app/modules/guideline/pages/overview-page/overview-page.component.html
+++ b/src/app/modules/guideline/pages/overview-page/overview-page.component.html
@@ -4,12 +4,12 @@
 <!--</ul>-->
 
 <section class="overview-page">
-  <section class="main-img-container">
+  <section class="main-img-container position-relative">
     <div class="d-flex main-img-container__gradient-bg">
       <p class="main-img-container__syntron-text text-white d-flex justify-content-center align-items-center">SYNTRON</p>
       <img src="" alt="" class="h-100 main-img-container__img">
     </div>
 
-    <app-news></app-news>
+    <app-news class="position-absolute bottom-0 end-0"></app-news>
   </section>
 </section>
