--- a/src/app/modules/shared/components/borderless-button/borderless-button.component.html
+++ b/src/app/modules/shared/components/borderless-button/borderless-button.component.html
@@ -1,4 +1,4 @@
 <button type="button"
-        class="btn border-0 px-4 font-md text-black-2 bg-primary-5--hover text-primary-3--hover bg-primary-5--active text-primary-2--active text-black-4--disabled component-borderless-button">
+        class="btn border-0 px-4 font-md text-black-2 bg-primary-5--hover text-primary-3--hover bg-primary-5--active text-primary-2--active text-black-4--disabled me-7_5">
   <ng-content></ng-content>
 </button>
