--- a/src/app/modules/shared/components/main-logo/main-logo.component.html
+++ b/src/app/modules/shared/components/main-logo/main-logo.component.html
@@ -1,1 +1,1 @@
-<img src="" alt="" class="h-100 component-main-logo">
+<img src="assets/img/logo/logo_main.png" alt="main-logo" class="h-100 component-main-logo">
