--- a/src/app/modules/shared/components/news/news.component.html
+++ b/src/app/modules/shared/components/news/news.component.html
@@ -1,17 +1,18 @@
 <article class="component-news">
-  <ul class="component-news__list overflow-hidden bg-white">
+  <ul class="component-news__tab overflow-hidden bg-white">
     <li *ngFor="let news of news"
-        class="d-flex justify-content-between align-items-center position-relative component-news__news">
+        class="d-flex justify-content-between align-items-center position-relative component-news__content">
       <div class="d-flex align-items-center">
         <div class="mx-4 text-nowrap">
           <h6>{{news.date}}</h6>
           <hr class="component-news__divider-colored border-0 my-0_5 opacity-100">
         </div>
-        <h6 class="me-12">{{news.title}}</h6>
+        <h6 class="me-2 me-sm-12">{{news.title}}</h6>
       </div>
 
-      <!-- TODO 等換 Icon-->
-      <p class="position-absolute end-0 mx-4">></p>
+      <app-icon-button class="position-absolute end-0 mx-4 component-news__icon-button">
+        <img src="assets/img/icon/arrow_forward.svg" alt="arrow-forward-icon-button">
+      </app-icon-button>
     </li>
   </ul>
 </article>
