--- a/src/app/modules/shared/components/news/news.component.scss
+++ b/src/app/modules/shared/components/news/news.component.scss
@@ -1,14 +1,18 @@
 @import "colors";
+@import "mixins";
 
 .component-news {
-  &__list {
+  &__tab {
     max-width: calc(100vw - 4.375rem);
     width: 26.5rem;
     max-height: 3rem;
     border-top-left-radius: 1rem;
+    @include generateStyleByMaxBreakpoint("sm") {
+      max-width: calc(100vw - 1.5rem);
+    }
   }
 
-  &__news {
+  &__content {
     animation: infinite playing-news 15s linear;
     height: 3rem;
   }
@@ -16,6 +20,12 @@
   &__divider-colored {
     height: 2px;
     background: linear-gradient(90deg, map-get($azure-light, 2) 0%, map-get($cyan-light, 2) 16.5%, map-get($green-light, 2) 33%, #FFFb9D 50%, map-get($black-light, 4) 50.1%, map-get($black-light, 4) 100%);
+  }
+
+  &__icon-button {
+    @include generateStyleByMaxBreakpoint("sm") {
+      display: none;
+    }
   }
 }
 
