feat: add round out, playing news add fade out animation

--- a/src/app/modules/shared/components/news/news.component.html
+++ b/src/app/modules/shared/components/news/news.component.html
@@ -1,4 +1,6 @@
 <article class="component-news">
+  <img src="assets/img/icon/round-out.png" alt="round-out" class="component-news__round-out position-absolute bottom-0">
+
   <ul class="component-news__tab overflow-hidden bg-white">
     <li *ngFor="let news of news"
         class="d-flex justify-content-between align-items-center position-relative component-news__content">
