--- a/src/app/modules/shared/components/news/news.component.scss
+++ b/src/app/modules/shared/components/news/news.component.scss
@@ -10,7 +10,7 @@
 
   &__tab {
     max-width: calc(100vw - 4.375rem);
-    width: 26.5rem;
+    width: 28rem;
     max-height: 3rem;
     border-top-left-radius: 1rem;
     @include generateStyleByMaxBreakpoint("sm") {
@@ -21,6 +21,24 @@
   &__content {
     animation: playing-news 15s linear infinite, fade-out 5s linear 4.8s infinite;
     height: 3rem;
+
+    &:hover::ng-deep {
+      .component-arrow-forward-icon-button {
+        fill: map-get($primary-light, 4);
+      }
+      .component-news__content-title {
+        color: map-get($primary-light, 4);
+      }
+    }
+
+    &:active::ng-deep {
+      .component-arrow-forward-icon-button {
+        fill: map-get($primary-light, 2);
+      }
+      .component-news__content-title {
+        color: map-get($primary-light, 2);
+      }
+    }
   }
 
   &__divider-colored {
