--- a/src/app/modules/guideline/pages/overview-page/overview-page.component.html
+++ b/src/app/modules/guideline/pages/overview-page/overview-page.component.html
@@ -1,10 +1,43 @@
+<span class="header-background position-absolute top-0 start-0"></span>
+
 <section class="overview-page">
   <section class="main-img-container position-relative">
     <div class="d-flex main-img-container__gradient-bg">
-      <p class="main-img-container__syntron-text text-white d-flex justify-content-center align-items-center">SYNTRON</p>
+      <p class="main-img-container__syntron-text text-white d-flex justify-content-center align-items-center">
+        SYNTRON</p>
       <img src="" alt="" class="h-100 main-img-container__img">
     </div>
 
     <app-news class="position-absolute bottom-0 end-0"></app-news>
+  </section>
+
+  <section>
+    <div class="d-flex justify-content-between align-items-center p-12">
+      <div class="d-flex flex-column justify-content-center news">
+        <h2 class="px-3 text-nowrap">最新消息</h2>
+        <h3 class="px-3">NEWS</h3>
+        <app-text-button class="news__view-all-button">
+          瀏覽全部
+          <app-arrow-forward-icon-button
+            class="news__view-all-arrow-forward-icon ms-1_5"></app-arrow-forward-icon-button>
+        </app-text-button>
+      </div>
+
+      <ul class="news-list px-5">
+        <li *ngFor="let news of news"
+            class="d-flex justify-content-between align-items-center cursor-pointer news-list__content bg-primary-5--hover rounded px-4">
+          <div class="d-flex flex-column flex-sm-row align-items-start align-items-sm-center me-2">
+            <div class="d-flex align-items-center">
+              <p class="text-nowrap news-list__date">{{news.date}}</p>
+              <hr class="news-list__divider-horizontal my-0_5 opacity-100 border-0 bg-black-4 mx-6">
+            </div>
+            <h5 class="text-black-2 news-list__title">{{news.title}}</h5>
+          </div>
+          <app-text-button class="d-none d-sm-flex justify-content-center align-items-center news-list__arrow-forward-button">
+            <app-arrow-forward-icon-button></app-arrow-forward-icon-button>
+          </app-text-button>
+        </li>
+      </ul>
+    </div>
   </section>
 </section>
