--- a/src/app/modules/guideline/pages/overview-page/overview-page.component.scss
+++ b/src/app/modules/guideline/pages/overview-page/overview-page.component.scss
@@ -1,4 +1,12 @@
 @import "colors";
+@import "mixins";
+
+.header-background {
+  background: map-get($azure-light, 2);
+  height: 5.625rem;
+  width: 5.625rem;
+  z-index: -1;
+}
 
 .overview-page {
   max-height: 100vh;
@@ -21,5 +29,82 @@
     border-bottom-left-radius: 3rem;
     padding-right: 0;
     width: calc(100% - 60px);
+  }
+}
+
+.news {
+  @include generateStyleByMaxBreakpoint("md") {
+    display: none !important;
+  }
+
+  &__view-all-button::ng-deep {
+    &:hover {
+      .component-arrow-forward-icon-button__path {
+        fill: map-get($primary-light, 4);
+      }
+    }
+
+    &:active {
+      .component-arrow-forward-icon-button__path {
+        fill: map-get($primary-light, 2);
+      }
+    }
+  }
+
+  &__view-all-arrow-forward-icon::ng-deep {
+    .component-arrow-forward-icon-button {
+      height: 1.375rem;
+      width: 1.375rem;
+
+      &__path {
+        fill: map-get($primary-light, 3);
+      }
+    }
+  }
+}
+
+.news-list {
+  width: 65%;
+  @include generateStyleByMaxBreakpoint("md") {
+    width: 100%;
+  }
+
+  &__content {
+    height: 3.125rem;
+
+    &:hover::ng-deep {
+      .news-list__date, .news-list__title {
+        color: map-get($primary-light, 4) !important;
+      }
+
+      .component-arrow-forward-icon-button__path {
+        fill: map-get($primary-light, 4);
+      }
+    }
+
+    &:active::ng-deep {
+      .news-list__date, .news-list__title {
+        color: map-get($primary-light, 2) !important;
+      }
+
+      .component-arrow-forward-icon-button__path {
+        fill: map-get($primary-light, 2);
+      }
+    }
+  }
+
+  &__divider-horizontal {
+    width: 6.25rem;
+    height: 2px;
+  }
+
+  &__arrow-forward-button::ng-deep {
+    height: 2.25rem;
+    width: 2.25rem;
+
+    .component-arrow-forward-icon-button {
+      height: 1.875rem;
+      width: 1.875rem;
+    }
   }
 }
