--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -1,8 +1,8 @@
 <header class="component-header bg-white">
   <div class="h-100 d-flex justify-content-between align-items-center component-header__container">
     <app-main-logo class="h-100"></app-main-logo>
-    <div class="menu d-flex">
-      <ul class="h-100 align-items-center menu__buttons">
+    <div class="d-flex">
+      <ul class="h-100 align-items-center d-none d-md-flex">
         <li>
           <app-borderless-button>最新消息</app-borderless-button>
         </li>
