--- a/src/app/modules/shared/components/news/news.component.html
+++ b/src/app/modules/shared/components/news/news.component.html
@@ -6,14 +6,14 @@
         class="d-flex justify-content-between align-items-center position-relative component-news__content cursor-pointer">
       <div class="h-100 d-flex align-items-center">
         <div class="mx-5 text-nowrap">
-          <h6>{{news.date}}</h6>
+          <p>{{news.date}}</p>
           <hr class="component-news__divider-colored border-0 my-0_5 opacity-100">
         </div>
-        <h6 class="me-2 me-sm-14 component-news__content-title">{{news.title}}</h6>
+        <h5 class="text-black-2 me-2 me-sm-14 component-news__content-title">{{news.title}}</h5>
       </div>
 
       <app-arrow-forward-icon-button
-        class="position-absolute end-0 mx-5 component-news__icon-button"></app-arrow-forward-icon-button>
+        class="position-absolute end-0 mx-5 d-none d-sm-flex"></app-arrow-forward-icon-button>
     </li>
   </ul>
 </article>
