--- a/src/app/modules/shared/components/news/news.component.scss
+++ b/src/app/modules/shared/components/news/news.component.scss
@@ -10,7 +10,7 @@
 
   &__tab {
     max-width: calc(100vw - 4.375rem);
-    width: 28rem;
+    width: 32rem;
     max-height: 3rem;
     border-top-left-radius: 1rem;
     @include generateStyleByMaxBreakpoint("sm") {
@@ -23,20 +23,20 @@
     height: 3rem;
 
     &:hover::ng-deep {
-      .component-arrow-forward-icon-button {
+      .component-arrow-forward-icon-button__path {
         fill: map-get($primary-light, 4);
       }
       .component-news__content-title {
-        color: map-get($primary-light, 4);
+        color: map-get($primary-light, 4) !important;
       }
     }
 
     &:active::ng-deep {
-      .component-arrow-forward-icon-button {
+      .component-arrow-forward-icon-button__path {
         fill: map-get($primary-light, 2);
       }
       .component-news__content-title {
-        color: map-get($primary-light, 2);
+        color: map-get($primary-light, 2) !important;
       }
     }
   }
@@ -44,12 +44,6 @@
   &__divider-colored {
     height: 2px;
     background: linear-gradient(90deg, map-get($azure-light, 2) 0%, map-get($cyan-light, 2) 16.5%, map-get($green-light, 2) 33%, #FFFb9D 50%, map-get($black-light, 4) 50.1%, map-get($black-light, 4) 100%);
-  }
-
-  &__icon-button {
-    @include generateStyleByMaxBreakpoint("sm") {
-      display: none;
-    }
   }
 }
 
