--- a/src/app/modules/guideline/pages/overview-page/overview-page.component.html
+++ b/src/app/modules/guideline/pages/overview-page/overview-page.component.html
@@ -12,7 +12,7 @@
   </section>
 
   <section>
-    <div class="d-flex justify-content-between align-items-center p-12">
+    <div class="d-flex justify-content-between align-items-center p-4 p-md-12">
       <div class="d-flex flex-column justify-content-center news">
         <h2 class="px-3 text-nowrap">最新消息</h2>
         <h3 class="px-3">NEWS</h3>
@@ -26,7 +26,7 @@
       <ul class="news-list px-5">
         <li *ngFor="let news of news"
             class="d-flex justify-content-between align-items-center cursor-pointer news-list__content bg-primary-5--hover rounded px-4">
-          <div class="d-flex flex-column flex-sm-row align-items-start align-items-sm-center me-2">
+          <div class="d-flex flex-column flex-sm-row align-items-start align-items-sm-center me-2 mw-100">
             <div class="d-flex align-items-center">
               <p class="text-nowrap news-list__date">{{news.date}}</p>
               <hr class="news-list__divider-horizontal my-0_5 opacity-100 border-0 bg-black-4 mx-6">
