feat: add product img

--- a/src/app/modules/guideline/pages/overview-page/overview-page.component.html
+++ b/src/app/modules/guideline/pages/overview-page/overview-page.component.html
@@ -11,8 +11,8 @@
     <app-news class="position-absolute bottom-0 end-0"></app-news>
   </section>
 
-  <section>
-    <div class="d-flex justify-content-between align-items-center p-4 p-md-12">
+  <section class="overflow-x-hidden">
+    <div class="d-flex justify-content-between align-items-center p-4 p-sm-8 p-md-12">
       <div class="d-flex flex-column justify-content-center news">
         <h2 class="px-3 text-nowrap">最新消息</h2>
         <h3 class="px-3">NEWS</h3>
@@ -40,4 +40,18 @@
       </ul>
     </div>
   </section>
+
+  <section class="my-5 position-relative product overflow-x-hidden">
+    <div class="product__img position-absolute top-0 d-none d-sm-block"></div>
+    <div class="d-flex flex-column align-items-center">
+      <h2>專業化產品</h2>
+      <h3>SPECIALIZED OFFERINGS</h3>
+    </div>
+
+
+    <div style="height: 500px">
+      cards
+    </div>
+  </section>
+
 </section>
