--- a/src/app/modules/shared/components/news/news.component.html
+++ b/src/app/modules/shared/components/news/news.component.html
@@ -12,8 +12,8 @@
         <h5 class="text-black-2 me-2 me-sm-14 component-news__content-title">{{news.title}}</h5>
       </div>
 
-      <app-arrow-forward-icon-button
-        class="position-absolute end-0 mx-5 d-none d-sm-flex"></app-arrow-forward-icon-button>
+      <app-arrow-forward-icon
+        class="position-absolute end-0 mx-5 d-none d-sm-flex"></app-arrow-forward-icon>
     </li>
   </ul>
 </article>
