--- a/src/app/modules/guideline/pages/overview-page/overview-page.component.html
+++ b/src/app/modules/guideline/pages/overview-page/overview-page.component.html
@@ -1,6 +1,6 @@
 <span class="header-background position-absolute top-0 start-0"></span>
 
-<section class="overview-page">
+<section class="overview-page" id="test">
   <section class="main-img-container position-relative">
     <div class="d-flex main-img-container__gradient-bg">
       <p class="main-img-container__syntron-text text-white d-flex justify-content-center align-items-center">
@@ -18,8 +18,8 @@
         <h3 class="px-3">NEWS</h3>
         <app-text-button class="news__view-all-button">
           瀏覽全部
-          <app-arrow-forward-icon-button
-            class="news__view-all-arrow-forward-icon ms-1_5"></app-arrow-forward-icon-button>
+          <app-arrow-forward-icon
+            class="news__view-all-arrow-forward-icon ms-1_5"></app-arrow-forward-icon>
         </app-text-button>
       </div>
 
@@ -33,8 +33,9 @@
             </div>
             <h5 class="text-black-2 news-list__title">{{news.title}}</h5>
           </div>
-          <app-text-button class="d-none d-sm-flex justify-content-center align-items-center news-list__arrow-forward-button">
-            <app-arrow-forward-icon-button></app-arrow-forward-icon-button>
+          <app-text-button
+            class="d-none d-sm-flex justify-content-center align-items-center news-list__arrow-forward-button">
+            <app-arrow-forward-icon></app-arrow-forward-icon>
           </app-text-button>
         </li>
       </ul>
@@ -42,15 +43,16 @@
   </section>
 
   <section class="my-5 position-relative product overflow-x-hidden">
-    <div class="product__img position-absolute top-0 d-none d-sm-block"></div>
-    <div class="d-flex flex-column align-items-center">
+    <div class="product__img position-absolute top-0 d-none d-sm-block"
+         [ngStyle]="scrollTransformStyle"></div>
+    <div class="d-flex flex-column align-items-center product__titles">
       <h2>專業化產品</h2>
       <h3>SPECIALIZED OFFERINGS</h3>
     </div>
 
 
-    <div style="height: 500px">
-      cards
+    <div class="product__gradient-bg">
+      <app-product-card> </app-product-card>
     </div>
   </section>
 
