feat: product cards

--- a/src/app/modules/guideline/pages/overview-page/overview-page.component.html
+++ b/src/app/modules/guideline/pages/overview-page/overview-page.component.html
@@ -51,8 +51,13 @@
     </div>
 
 
-    <div class="product__gradient-bg">
-      <app-product-card> </app-product-card>
+    <div class="product__gradient-bg p-4 p-sm-8 p-md-12">
+      <div class="row product__cards">
+        <app-product-card class="col-12 col-sm-6 col-md-3 mb-4"></app-product-card>
+        <app-product-card class="col-12 col-sm-6 col-md-3 mb-4"></app-product-card>
+        <app-product-card class="col-12 col-sm-6 col-md-3 mb-4"></app-product-card>
+        <app-product-card class="col-12 col-sm-6 col-md-3 mb-4"></app-product-card>
+      </div>
     </div>
   </section>
 
