--- a/src/app/modules/shared/components/product-card/product-card.component.scss
+++ b/src/app/modules/shared/components/product-card/product-card.component.scss
@@ -1,77 +1,94 @@
 @import "colors";
+@import "mixins";
 
 .component-product-card {
   width: fit-content;
-  transform: translateX(100px);
 
   &:hover {
-    .component-product-card__text-animation {
-      color: white !important;
-    }
-
-    .component-product-card__content {
-      &:before {
-        transform: translate(-50%, -50%) scale(6.5);
-        transition: transform 0.3s ease-in-out;
+    @include generateStyleByBreakpoint("md") {
+      .component-product-card__text-animation {
+        color: white !important;
+        transition: color 1s ease-in-out;
       }
 
-      &:after {
-        transform: translate(-50%, -50%) scale(6.5);
-        transition: transform 0.3s ease-in-out;
-        transition-delay: 0.3s;
-      }
-    }
+      .component-product-card__content {
+        &:before {
+          transform: translate(-50%, -50%) scale(6.5);
+          transition: transform 0.8s ease-in-out;
+        }
 
-    .component-product-card__button {
-      &:before {
-        transform: translate(-50%, -50%) scale(1);
-        transition: transform 0.3s ease-in-out;
-        transition-delay: 0.6s;
+        &:after {
+          transform: translate(-50%, -50%) scale(6.5);
+          transition: transform 0.8s ease-in-out;
+          transition-delay: 0.2s;
+        }
+      }
+
+      .component-product-card__button {
+        &:before {
+          transform: translate(-50%, -50%) scale(1);
+          transition: transform 0.8s ease-in-out;
+          transition-delay: 0.2s;
+        }
       }
     }
   }
 
   &__spacing {
     height: 1rem;
-    width: 18.625rem;
+    width: 20.875rem;
+    @include generateStyleByBreakpoint("md") {
+      width: 18.625rem;
+    }
   }
 
   &__content {
-    width: 18.625rem;
+    width: 20.875rem;
     min-height: 10rem;
     box-shadow: 5px 5px 15px 0px rgba(0, 0, 0, 0.1);
 
-    &::before,
-    &::after {
-      content: "";
-      width: 8.125rem;
-      height: 8.125rem;
-      transform: translate(-22%, 13%) scale(0);
-      display: flex;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      border-radius: 100%;
+    @include generateStyleByBreakpoint("md") {
+      width: 18.625rem;
+      &::before,
+      &::after {
+        content: "";
+        width: 8.125rem;
+        height: 8.125rem;
+        transform: translate(-22%, 13%) scale(0);
+        display: flex;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        border-radius: 100%;
+      }
     }
   }
 
   &__img {
-    width: 17.125rem;
+    width: 19.375rem;
     left: 0.875rem;
+    @include generateStyleByBreakpoint("md") {
+      width: 17.125rem;
+    }
   }
 
   &__button {
-    &::before {
-      content: "";
-      width: 8.125rem;
-      height: 8.125rem;
-      transform: translate(-50%, -50%) scale(0);
-      display: flex;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      border-radius: 100%;
-      background-color: white;
+    margin-top: 2.25rem;
+    @include generateStyleByBreakpoint("md") {
+      margin-top: 3.75rem;
+
+      &::before {
+        content: "";
+        width: 8.125rem;
+        height: 8.125rem;
+        transform: translate(-50%, -50%) scale(0);
+        display: flex;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        border-radius: 100%;
+        background-color: white;
+      }
     }
   }
 
