--- a/src/app/modules/guideline/pages/overview-page/overview-page.component.html
+++ b/src/app/modules/guideline/pages/overview-page/overview-page.component.html
@@ -53,10 +53,18 @@
 
     <div class="product__gradient-bg p-4 p-sm-8 p-md-12">
       <div class="row product__cards">
-        <app-product-card class="col-12 col-sm-6 col-md-3 mb-4"></app-product-card>
-        <app-product-card class="col-12 col-sm-6 col-md-3 mb-4"></app-product-card>
-        <app-product-card class="col-12 col-sm-6 col-md-3 mb-4"></app-product-card>
-        <app-product-card class="col-12 col-sm-6 col-md-3 mb-4"></app-product-card>
+        <app-product-card
+          type="healthcare"
+          class="col-12 col-sm-6 col-md-3 mb-4 mb-md-0"></app-product-card>
+        <app-product-card
+          type="pill"
+          class="col-12 col-sm-6 col-md-3 mb-4 mb-md-0"></app-product-card>
+        <app-product-card
+          type="dns"
+          class="col-12 col-sm-6 col-md-3 mb-4 mb-md-0"></app-product-card>
+        <app-product-card
+          type="backup"
+          class="col-12 col-sm-6 col-md-3 mb-4 mb-md-0"></app-product-card>
       </div>
     </div>
   </section>
