--- a/src/app/modules/shared/components/product-card/product-card.component.html
+++ b/src/app/modules/shared/components/product-card/product-card.component.html
@@ -5,7 +5,7 @@
        class="border-radius-xl bg-black component-product-card__img position-absolute top-0 z-2">
 
   <div
-    class="component-product-card__content bg-white border-radius-xl px-3_5 pb-5 overflow-hidden position-relative"
+    class="component-product-card__content bg-white border-radius-xl px-3_5 pb-5 overflow-hidden position-relative d-flex flex-column justify-content-between"
     [ngClass]="getPseudoClass()">
     <div class="d-flex flex-column align-items-center mt-40 position-relative z-2">
       <p class="font-xl text-black-1 mb-2 component-product-card__text-animation"
